Fix for blocker bug 62787; xulBindings.xml load was being cancelled when dismissing the profile picker. sr=hyatt, a=attinasi